# nlc

./: .gitignore  CMakeLists.txt  Makefile
include/: nlcarg.h  nlcio.h  nlclib.h  string.h  uninlc.h
include/nlc/: io.h  lib.h
include/nlc/sys/: types.h
src/: exit.c  main.c  nlc_start_main.c  start.s
src/env/: nlc_cnu_init.c  nlc_start_main.c
src/io/: print.c  scan.c
src/lib/: exit.c
src/lib/io/: print.c  scan.c
src/lib/io/print/: putchar.c  putnbr.c  puts.c
src/lib/lib/: atoi.c  exit.c  malloc.c
src/lib/string/: mem.c  strcpy.c  strlen.c
src/lib/uni/: brk.c  read.c  sbrk.c  write.c
src/uni/: read.c  write.c
